--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
-  "name": "cover-letter-generator",
+  "name": "multi-step-form-wizard",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "build": "vue-tsc --noEmit && vite build",
+    "lint:js": "eslint src --ext .js,.ts,.vue",
+    "preview": "vite preview",
+    "test": "jest src"
   },
   "dependencies": {
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "^2.2.7",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.9.0",
+    "jest": "^29.3.1",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "vue-tsc": "^1.0.11"
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.4",
+    "vue-eslint-parser": "^9.1.0",
+    "vue-jest": "^5.0.0-alpha.10",
+    "vue-tsc": "^1.0.24"
   }
 }
