--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest src"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.7",
+    "@heroicons/vue": "^2.0.13",
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/jest": "^29.2.6",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
