--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.7",
     "@heroicons/vue": "^2.0.13",
+    "chatgpt": "^3.5.1",
+    "puppeteer": "^19.6.0",
     "vue": "^3.2.45"
   },
   "devDependencies": {
