--- a/package.json
+++ b/package.json
@@ -1,48 +1,16 @@
 {
-  "name": "multi-step-form-wizard",
   "private": true,
-  "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "lint:js": "eslint src --ext .js,.ts,.vue",
-    "preview": "vite preview",
-    "test": "jest src",
-    "vercel": "vercel"
-  },
-  "dependencies": {
-    "@headlessui/vue": "^1.7.7",
-    "@heroicons/vue": "^2.0.13",
-    "chatgpt": "^3.5.1",
-    "puppeteer": "^19.6.0",
-    "vue": "^3.2.45"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
-    "@types/jest": "^29.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "@vercel/node": "^2.8.15",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.2.7",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.9.0",
-    "jest": "^29.3.1",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "tailwindcss": "^3.2.4",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4",
-    "vue-eslint-parser": "^9.1.0",
-    "vue-jest": "^5.0.0-alpha.10",
-    "vue-tsc": "^1.0.24"
+    "nuxt": "^3.1.0"
   },
-  "engines": {
-    "node": "18.x"
+  "engines":{
+    "node": ">=18.0.0"
   }
 }
