--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "devDependencies": {
     "nuxt": "^3.1.0"
   },
-  "engines":{
+  "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "chatgpt": "^3.5.1",
+    "puppeteer": "^19.6.0"
   }
 }
