--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.2.0",
+    "@tailwindcss/forms": "^0.5.3",
     "nuxt": "^3.1.0"
   },
   "engines": {
