--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore .",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@tailwindcss/forms": "^0.5.3",
-    "nuxt": "^3.1.0"
+    "eslint": "^8.32.0",
+    "nuxt": "^3.1.0",
+    "vite-plugin-eslint": "^1.8.1"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.7",
+    "@heroicons/vue": "^2.0.13",
     "chatgpt": "^3.5.1",
     "puppeteer": "^19.6.0"
   }
