--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.2.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.9.0",
     "nuxt": "^3.1.0",
-    "vite-plugin-eslint": "^1.8.1"
+    "prettier": "^2.8.3",
+    "typescript": "^4.9.4",
+    "vite-plugin-eslint": "^1.8.1",
+    "vue-eslint-parser": "^9.1.0"
   },
   "engines": {
     "node": ">=18.0.0"
